# pluton

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml  vcpkg.json
.github/workflows/: build.yml
cpp/: CMakeLists.txt
cpp/bindings/: module.cpp
cpp/include/pluton/: gltf_import.h  halfedge.h  mesh.h  primitives.h  ray_intersect.h  version.h
cpp/src/: gltf_import.cpp  halfedge.cpp  mesh.cpp  primitives.cpp  ray_intersect.cpp  version.cpp
cpp/tests/: CMakeLists.txt  test_gltf_import.cpp  test_halfedge.cpp  test_mesh.cpp  test_primitives.cpp  test_ray_intersect.cpp  test_version.cpp
docs/: 2026-05-16-pluton-design.md  2026-05-17-M0-foundation-plan.md  2026-05-19-M1-core-viewport-design.md  2026-05-19-M1-core-viewport-plan.md  2026-05-22-M2-basic-drawing-design.md  2026-05-22-M2-basic-drawing-plan.md  2026-05-22-M3a-topology-and-undo-design.md  2026-05-22-M3a-topology-and-undo-plan.md  2026-05-23-M3b-push-pull-design.md  2026-05-23-M3b-push-pull-plan.md  2026-06-10-M3c-closed-manifold-push-pull-design.md  2026-06-10-M3c-closed-manifold-push-pull-plan.md  2026-06-11-M3d-3d-inferencing-design.md  2026-06-11-M3d-3d-inferencing-plan.md  2026-06-15-M4a-drawing-tools-design.md  2026-06-15-M4a-drawing-tools-plan.md  2026-06-16-M4b-selection-eraser-design.md  2026-06-16-M4b-selection-eraser-plan.md  2026-06-16-M4c-transforms-design.md  2026-06-16-M4c-transforms-plan.md  2026-06-16-M4d-units-measurement-design.md  2026-06-16-M4d-units-measurement-plan.md  2026-06-19-M4e-groups-components-design.md  2026-06-19-M4e-groups-components-plan.md  2026-06-21-M5a-viewport-styles-design.md  2026-06-21-M5a-viewport-styles-plan.md  2026-06-22-M5b-materials-design.md  2026-06-22-M5b-materials-plan.md  2026-06-22-M5c-tags-design.md  2026-06-22-M5c-tags-plan.md  2026-06-25-M6a-fileio-design.md  2026-06-25-M6a-fileio-plan.md  2026-07-08-M6b-obj-design.md  2026-07-08-M6b-obj-plan.md  2026-07-11-M6c-gltf-design.md  2026-07-11-M6c-gltf-plan.md  2026-07-12-M7a-wall-design.md  2026-07-12-M7a-wall-plan.md  2026-07-12-M7b-doorwindow-design.md  2026-07-12-M7b-doorwindow-plan.md  (+6 more)
python/pluton/: __init__.py  __main__.py  app.py  document.py  selection.py  units.py
python/pluton/annotations/: __init__.py  draw_plan.py  picking.py
python/pluton/commands/: __init__.py  annotation_commands.py  command.py  command_stack.py  explode_command.py  gltf_commands.py  group_commands.py  instance_commands.py  instance_lifecycle_commands.py  material_commands.py  obj_commands.py  opening_commands.py  roof_commands.py  scene_commands.py  tag_commands.py  view_commands.py  wall_commands.py
python/pluton/geometry/: __init__.py  curves.py  opening.py  plane.py  roof.py  transforms.py  wall.py
python/pluton/io/: __init__.py  document_codec.py  errors.py  gltf_codec.py  gltf_export.py  gltf_import.py  gltf_scene.py  obj_codec.py  obj_io.py  pluton_file.py
python/pluton/model/: __init__.py  annotation.py  definition.py  instance.py  material.py  model.py  tag.py
python/pluton/scene/: __init__.py  edge.py  face.py  scene.py  vertex.py
python/pluton/tools/: __init__.py  annotation_support.py  arc_tool.py  circle_tool.py  dimension_tool.py  erase_tool.py  line_tool.py  move_tool.py  opening_tool.py  paint_tool.py  polygon_tool.py  push_pull_tool.py  rectangle_tool.py  roof_tool.py  rotate_tool.py  scale_tool.py  select_tool.py  shape_support.py  tape_measure_tool.py  text_tool.py  tool.py  tool_manager.py  transform_support.py  wall_tool.py
python/pluton/ui/: __init__.py  document_controller.py  main_window.py  materials_dock.py  opening_options_bar.py  roof_options_bar.py  scenes_dock.py  status_bar.py  tags_dock.py  value_control_box.py  wall_options_bar.py
python/pluton/viewport/: __init__.py  annotation_painter.py  camera.py  face_batches.py  picking.py  render_style.py  scene_renderer.py  snap_engine.py  view_animator.py  viewport_widget.py
python/pluton/viewport/shaders/: ghost_fill.vert  line.vert  phong.frag  phong.vert
python/pluton/views/: capture.py  interpolate.py  saved_view.py  view_library.py
tests/: conftest.py  test_anchor_world_frame.py  test_annotation_commands.py  test_annotation_edit_move.py  test_annotation_entities.py  test_annotation_painter.py  test_annotation_persistence.py  test_annotation_picking.py  test_annotation_select_erase.py  test_arc_tool.py  test_bbox_edges.py  test_binding.py  test_breadcrumb.py  test_camera.py  test_capture.py  test_circle_tool.py  test_command_stack.py  test_dim_rule.py  test_dimension_tool.py  test_dissolve_edge_command.py  test_document_codec.py  test_document_controller.py  test_document_settings.py  test_draw_plan_dimension.py  test_draw_plan_label.py  test_erase_tool.py  test_escape_exits_group.py  test_explode_command.py  test_explode_multi_instance.py  test_face_batches.py  test_geometry_curves.py  test_geometry_plane.py  test_gltf_bridge.py  test_gltf_build_meshes.py  test_gltf_build_nodes.py  test_gltf_codec.py  test_gltf_commands.py  test_gltf_export.py  test_gltf_integration.py  test_gltf_roundtrip.py  (+131 more)
tests/data/gltf/: README.md  draco_box.glb  plain_box.glb
